# No-country-equipo-22

./: .env  .gitignore  README.md  pom.xml  pyproject.toml
Backend/: manage.py
Backend/api-gateway/: .env  .gitignore  HELP.md  pom.xml
Backend/api-gateway/src/main/resources/: application.properties
Backend/auth-service/: .env  .gitignore  HELP.md  pom.xml
Backend/auth-service/src/main/resources/: application.properties
Backend/backpy/: asgi.py  settings.py  urls.py  wsgi.py
Backend/doctors/: pom.xml
Backend/doctors/src/main/resources/: application.properties
Backend/patients/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
Backend/patients/api/: urls.py
Backend/patients/migrations/: 0001_initial.py
Fronted/app-turnos-teleasist/: README.md  package-lock.json  package.json
Fronted/app-turnos-teleasist/src/_components/: Register.tsx
Fronted/app-turnos-teleasist/src/_schemas/: register-schema.ts
Fronted/app-turnos-teleasist/src/_service/: general-api.ts
Fronted/app-turnos-teleasist/src/_service/use-cases/: medic-register-service.ts
Fronted/app-turnos-teleasist/src/_service/use-mutation-services/: register-mutation-services.ts
Fronted/app-turnos-teleasist/src/_types/: register-type.ts
Fronted/app-turnos-teleasist/src/app/: globals.css  layout.tsx  page.tsx
Fronted/app-turnos-teleasist/src/app/register/: page.tsx
Fronted/app-turnos-teleasist/src/context/: Providers.tsx
src/main/java/com/example/auth_service/Config/: AppConfig.java  OpenApiConfig.java
(+62 files in other folders)
